internal/config/testdata/invalid-config/Account.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: ""
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      CreateAlbums: folderName
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}